--- a/temporizador.html
+++ b/temporizador.html
@@ -232,6 +232,9 @@
           detenerCuentaRegresiva(index);
           timerElement.classList.add('timer-finished');
           document.getElementById('audio').play();
+          if (navigator.vibrate) {
+            navigator.vibrate([500, 200, 500, 200, 500]); // Vibrate pattern
+          }
         }
       }
 
@@ -349,13 +352,13 @@
 
           <div>
             <label for="hours${contadorTemporizadores}">Horas:</label>
-            <input type="number" id="hours${contadorTemporizadores}" min="0" value="00">
+            <input type="number" id="hours${contadorTemporizadores}" min="00" value="00">
 
             <label for="minutes${contadorTemporizadores}">Minutos:</label>
-            <input type="number" id="minutes${contadorTemporizadores}" min="0" value="00">
+            <input type="number" id="minutes${contadorTemporizadores}" min="00" value="00">
 
             <label for="seconds${contadorTemporizadores}">Segundos:</label>
-            <input type="number" id="seconds${contadorTemporizadores}" min="0" value="00">
+            <input type="number" id="seconds${contadorTemporizadores}" min="00" value="00">
           </div>
 
           <div class="button-container">
@@ -410,13 +413,13 @@
 
     <div>
       <label for="hours1"></label>
-      <input type="number" id="hours1" min="0" value="00">
+      <input type="number" id="hours1" min="00" value="00">
 
       <label for="minutes1">|</label>
-      <input type="number" id="minutes1" min="0" value="00">
+      <input type="number" id="minutes1" min="00" value="00">
 
       <label for="seconds1">|</label>
-      <input type="number" id="seconds1" min="0" value="00">
+      <input type="number" id="seconds1" min="00" value="00">
     </div>
 
     <div class="button-container">
@@ -431,13 +434,13 @@
 
     <div>
       <label for="hours2"></label>
-      <input type="number" id="hours2" min="0" value="00">
+      <input type="number" id="hours2" min="00" value="00">
 
       <label for="minutes2">|:</label>
-      <input type="number" id="minutes2" min="0" value="00">
+      <input type="number" id="minutes2" min="00" value="00">
 
       <label for="seconds2">|</label>
-      <input type="number" id="seconds2" min="0" value="00">
+      <input type="number" id="seconds2" min="00" value="00">
     </div>
 
     <div class="button-container">
@@ -448,7 +451,9 @@
 
     <div class="dotted-line"></div>
 
-    <textarea cols="40%" rows="15" id="textoModificado">2025 enero
+    <textarea cols="40%" rows="15" id="textoModificado">
+        
+        2025 enero
 40x40 negativo gris y p usado
 1:10 detalle toner casa
 1:10 romeros pizza
