--- a/temporizador.html
+++ b/temporizador.html
@@ -436,7 +436,7 @@
       <label for="hours2"></label>
       <input type="number" id="hours2" min="00" value="00">
 
-      <label for="minutes2">|:</label>
+      <label for="minutes2">|</label>
       <input type="number" id="minutes2" min="00" value="00">
 
       <label for="seconds2">|</label>
@@ -589,6 +589,18 @@ function closeNav() {
   <a href="#" class="stickybar"><span style="font-size:30px;cursor:pointer" onclick="openNav()">
 <img src="/colors/imagenes/intelligentbusinesssystem.gif"  style="width:49px;" align="top"></span></a></div>
 
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('/service-worker.js')
+        .then(registration => {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope);
+        }, err => {
+          console.log('ServiceWorker registration failed: ', err);
+        });
+    });
+  }
+</script>
 
 </body>
 </html>
