--- a/paypal.html
+++ b/paypal.html
@@ -10,7 +10,7 @@
 
         // Función que se ejecuta cuando Google Pay se ha cargado
         function onGooglePayLoaded() {
-            const paymentsClient = new google.payments.api.PaymentsClient({ environment: 'TEST' });
+            const paymentsClient = new google.payments.api.PaymentsClient({ environment: 'PRODUCTION' });
             paymentButton = paymentsClient.createButton({ onClick: onGooglePayButtonClicked });
             document.getElementById('gpay-button').appendChild(paymentButton);
         }
@@ -47,7 +47,7 @@
                 }
             };
 
-            const paymentsClient = new google.payments.api.PaymentsClient({ environment: 'TEST' });
+            const paymentsClient = new google.payments.api.PaymentsClient({ environment: 'PRODUCTION' });
             paymentsClient.loadPaymentData(paymentDataRequest).then(function(paymentData) {
                 // Manejar la respuesta del pago
                 console.log(paymentData);
