--- a/paypal.html
+++ b/paypal.html
@@ -30,13 +30,13 @@
                         type: 'PAYMENT_GATEWAY',
                         parameters: {
                             gateway: 'example',
-                            gatewayMerchantId: 'BCR2DN4T766M5BY7'
+                            gatewayMerchantId: '5554526856'
                         }
                     }
                 }],
                 merchantInfo: {
-                    merchantId: 'BCR2DN4T766M5BY7',
-                    merchantName: 'Example Merchant'
+                    merchantId: '5554526856',
+                    merchantName: 'QuetzalArte.com'
                 },
                 transactionInfo: {
                     totalPriceStatus: 'FINAL',
