--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -295,7 +295,7 @@ mostrando google
 </div>
 
 <div id="bitso" class="bank-transfer-details payment-details">
-    <img src="/imagenes/pagos_bitso.png" alt="Pagar con Bitso">
+    <img src="/colors/imagenes/pagos_bitso.png" alt="Pagar con Bitso">
 </div>
 
 <div id="autoservicio" class="bank-transfer-details payment-details">
