--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -107,7 +106,8 @@
         }
 
         @media (max-width: 480px) {
-            .product { width: 100%; }
+            .product { width: 100%; display: flex; flex-direction: column; align-items: center; }
+            .product img { width: 80%; height: auto; margin-bottom: 10px; }
             .search-bar { float: none; margin-bottom: 10px; }
             .section div p { flex: 1 1 100%; }
             .shipping-options button, .payment-options button { flex: 1 1 100%; }
@@ -660,6 +660,16 @@ mostrando google
                     shippingMessage = '🚚 Envío express 1.5kg. 3 días. Costo: $199';
                     break;
                 case 'premium':
+                    shippingMessage = '✈️ Envío premium 1.5kg. 1 día. Costo: $499';
+                    break;
+                case '3kg':
+                    shippingMessage = '🚚 Envío 3kg. 5 días. Costo: $599';
+                    break;
+                case '6kg':
+                    shippingMessage = '🚚 Envío 6kg. 5 días. Costo: $699';
+                    break;
+                case '9kg':
+                    shippingMessage = '🚚 Envío 9kg. 5 días. Costo: $799';
                     break;
                 case '15kg':
                     shippingMessage = '🚚 Envío 15kg. 5 días. Costo: $799';
