--- a/carrito_compras.html
+++ b/carrito_compras.html
@@ -106,11 +106,31 @@
         }
 
         @media (max-width: 480px) {
-            .product { width: 100%; display: flex; flex-direction: column; align-items: center; }
-            .product img { width: 80%; height: auto; margin-bottom: 10px; }
-            .search-bar { float: none; margin-bottom: 10px; }
-            .section div p { flex: 1 1 100%; }
-            .shipping-options button, .payment-options button { flex: 1 1 100%; }
+            .product { 
+                width: 100%; 
+                display: flex; 
+                flex-direction: column; 
+                align-items: center; 
+            }
+            .product img { 
+                width: 80%; 
+                height: auto; 
+                margin-bottom: 10px; 
+            }
+            .product-details {
+                text-align: center; /* Center-align product details */
+            }
+            .search-bar { 
+                float: none; 
+                margin-bottom: 10px; 
+            }
+            .section div p { 
+                flex: 1 1 100%; 
+            }
+            .shipping-options button, 
+            .payment-options button { 
+                flex: 1 1 100%; 
+            }
         }
     </style>
 </head>
@@ -867,3 +887,4 @@ function solicitarPedido() {
 
 </body>
 </html>
+a
